--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ConyBlockBrace",
   "displayName": "BlockBrace",
   "description": "本插件可以将花括号(大括号)构成的js语句块高亮显示,便于{}代码块的编辑与查看,支持Js、Ts、Json、Java、C、Cpp,从而实现可视化编程.本插件可以将花括号(大括号)构成的js语句块高亮显示,便于{}代码块的编辑与查看,支持Js、Ts、Json、Java、C、Cpp,从而实现可视化编程.This plugin can highlight JavaScript statement blocks composed of curly braces (curly braces) for easy editing and viewing of {} code blocks. It supports Js, Ts, Json, Java, C, and Cpp to achieve visual programming.",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "publisher": "sdsds222",
   "keywords": [
     "ConyBlockBrace",
@@ -30,7 +30,7 @@
     "onLanguage:java",
     "onLanguage:c",
     "onLanguage:cpp",
-    "onLanguage:c#"
+    "onLanguage:csharp"
   ],
   "main": "./extension.js",
   "contributes": {
@@ -124,9 +124,9 @@
         ]
       },
       {
-        "id": "c#",
+        "id": "csharp",
         "extensions": [
-          ".c#"
+          ".csharp"
         ]
       }
     ],
@@ -170,7 +170,7 @@
         "ConyBlockBrace.ColorModeEnabled": {
           "type": "boolean",
           "default": false,
-          "description": "打开色彩模式,同一层代码块内同级的代码块将显示不同颜色。 Colors showing in a common brace block.;"
+          "description": "打开同级色彩模式,同一层代码块内同级的代码块将显示相同颜色(重启VScode生效)。 Single color showing in a common brace block."
         }
       }
     }
